Minor tweaks to the icons.

--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@
                     iconUrl: iconUrl,
                     iconSize: [15, 15],
                     iconAnchor: [10, 10],
-                    popupAnchor: [0, 0]
+                    popupAnchor: [0, 0],
+                    opacity: 0.6
                 });
 
                 return L.marker(latlng, {icon: customIcon});
